Redid main event log controls
* Added a "Log" button, instead of the event type's name itself.
* Added a text field for displaying the name of the event type
* Changed EventButtonView to use view_log_buttons.xml layout,
  rather than hard-coded

Signed-off-by: Jason Tarka <jason.tarka@belligero.org>